move Reach UI styles to index.html (slinkity limitation)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jam with Vite!</title>
   <link rel="stylesheet" href="/assets/styles.scss">
+  <script type="module">import '@reach/tabs/styles.css';</script>
 </head>
 
 <body>
