switch to njk because of some wacky prop passing probs

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,12 @@
 ---
-title: Jamslinkity Conf
+title: Hello Jamstack Conf 👋
 layout: layout
 ---
 
 <article>
-  {% assign talks = collections.talks | formatTalks %}
-  {% react 'components/Logo.jsx' 'render' 'static' %}
-  {% react 'components/Heading.jsx' 'render' 'static' %}
-  {% react 'components/ImageCarousel.jsx' 'render' 'lazy' 'talks' talks %}
-  {% react 'components/LearnMore.jsx' 'render' 'static' %}
+  {% set talks = collections.talks | formatTalks %}
+  {% react 'components/Heading', 'render', 'static' %}
+  {% react 'components/ImageCarousel', 'render', 'eager', 'talks', talks %}
+  {% react 'components/LearnMore', 'render', 'static' %}
   <footer>Made with ❤️ by Ben Holmes</footer>
 </article>
